Updated Documentation and added additional plotting code.

--- a/docs/readme_doc/README.tex
+++ b/docs/readme_doc/README.tex
@@ -170,6 +170,9 @@ There are a total of six examples included with the code.  Each example is in a 
 
     
 \end{itemize}
+\section{Other Python Plotting Routines}
+
+I have included several other Python plotting routines, especially AreaTrend.py, VertexTrend.py, and PixelModel.py, which I have used to analyze the pixel area and vertex shifts.  These will almost certainly need some customization to run on your output, but I include them since they are probably useful as a starting point.
 
 \end{document}
 
